--- a/exe001.html
+++ b/exe001.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript exercício 01</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      body {
+        background-color: black;
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Olá, mundo!</h1>
+    <p>
+      Já me livrei da maldição! 
+    </p>
+    <script>
+        window.alert('Minha primeira mensagem...')
+        window.confirm('Está gostando de JavaScript?')
+        window.prompt('Qual o seu nome?')
+    </script>
+  </body>
 </html>
