--- a/exe001.html
+++ b/exe001.html
@@ -17,9 +17,11 @@
       Já me livrei da maldição! 
     </p>
     <script>
-        window.alert('Minha primeira mensagem...')
+        window.alert('Minha primeira mensagem...') //alerta
         window.confirm('Está gostando de JavaScript?')
         window.prompt('Qual o seu nome?')
+        /* confirmação e caixa
+        de diálogo*/
     </script>
   </body>
 </html>
