--- a/exe004.html
+++ b/exe004.html
@@ -16,9 +16,17 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript.</p>
-    <div>Clique aqui</div>
+    <div id="msg">Clique aqui</div>
     <script>
-
+        var corpo = window.document.body
+        var p1 = window.document.getElementsByTagName('p')[0]
+        window.document.write('Está escrito assim: ' + p1.innerText)
+        corpo.style.background = 'pink'
+        p1.style.color = 'blue'
+        var d = window.document.getElementById('msg')
+        d.style.background = 'green'
+        var d = window.document.querySelector('div#msg') //# p/ id, . p/ class
+        d.style.color = 'white'
     </script>
 </body>
 </html>
