--- a/exe005.html
+++ b/exe005.html
@@ -14,6 +14,14 @@
             line-height: 200px;
             text-align: center;
         }
+
+        input {
+            width: 100px;
+        }
+
+        div#res {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -52,7 +60,7 @@
             var n1 = Number(tn1.value)
             var n2 = Number(tn2.value)
             var s = n1 + n2
-            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a ${s}`
+            res.innerHTML = `A soma entre ${n1} e ${n2} é igual a <strong>${s}<strong>`
         }
     </script>
 
